--- a/daddleweb/templates/index.html
+++ b/daddleweb/templates/index.html
@@ -1,11 +1,13 @@
 {% extends "layout.html" %}
 
 {% block content %}
+    <div id="events">
     {% for event in events %}
-        <article>
-            <h2>{{ event.title }}</h2>
-            {{ event.start_date }}
-            <ul class="pledges">
+        <article class="event">
+          <h2>{{ event.mission.title }} &mdash; {{ event.title }}</h2>
+            <div class="start_date">{{ event.start_date }}</div>
+            <div class="pledges">{{ event.active_pledges|length }}/{{ event.max_people }}</div>
+            <ul class="pledgers">
                 {% for pledge in event.pledge_set.all %}
                 <li {% if not pledge.is_active %} class="canceled" {% endif %}>
                   {{ pledge.user }}
@@ -13,4 +15,5 @@
                 {% endfor %}
         </article>
     {% endfor %}
+    </div> <!-- #events -->
 {% endblock %}
