--- a/daddleweb/templates/welcome.html
+++ b/daddleweb/templates/welcome.html
@@ -3,6 +3,10 @@
 {% block content %}
     <div id="welcome">
         <p>Welcome to daddle!</p>
+        <p>daddle is a tool to organize raids or other events with multiple
+           people.</p>
+        <p>I wrote daddle to easier organize raids with my Destiny clan.</p>
+        <p>daddle is open source and can be found on <a href="https://github.com/zoranzaric/daddle" target="_blank">GitHub</a></p>
     </div> <!-- #welcome -->
 {% endblock %}
 
