--- a/daddleweb/templates/layout.html
+++ b/daddleweb/templates/layout.html
@@ -14,6 +14,8 @@
     {% bootstrap_css %}
     {% bootstrap_javascript %}
 
+    {% block head %}{% endblock %}
+
   </head>
   <body>
     <div class="container">
