--- a/daddleweb/templates/layout.html
+++ b/daddleweb/templates/layout.html
@@ -32,6 +32,9 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
+              {% if user.is_staff %}
+              <li ><a href="/admin">Admin</a></li>
+              {% endif %}
               {% if not user.is_authenticated %}
               <li ><a href="/login">Login</a></li>
               {% endif %}
